chore: add retry checkbox to issue template

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -32,6 +32,17 @@ body:
       render: text
     validations:
       required: true
+  - type: checkboxes
+    id: retried
+    attributes:
+      label: Kurulum sayısı
+      description: Kurulumu farklı zaman ve ortamlarda bir kaç kez tekrar ettiniz mi?
+      options:
+        - label: Evet, en az bir defa tekrar ettim
+        - label: Evet, birden fazla defa tekrar ettim
+        - label: Hayır, tekrar deneme yapmadım (lütfen bu noktada durup kurulumu tekrar edin)
+    validations:
+      required: true
   - type: textarea
     id: details
     attributes:
