feat: assert home folder contains only ASCII chars
Some scoop commands fail otherwise.  For example, if the user name,
hence home folder name is 'C:\Users\Zeynep Sıla' scoop fails with the
following command:

	Could not create process with command '"C:\Users\Zeynep	S?la\scoop\apps\git\current\cmd\git.exe" ls-remote https://github.com/ScoopInstaller/Extras '

This issue should be upstreamed, but till that time, we should prevent such
conditions.

--- a/src/src.toml
+++ b/src/src.toml
@@ -116,6 +116,8 @@ extension = ".ps1"
 [[symbols]]
 	symbol  = "windows/assertExecutionPolicy"
 [[symbols]]
+	symbol  = "windows/assertHomeSensible"
+[[symbols]]
 	symbol  = "windows/assertNetConnectivity"
 [[symbols]]
 	symbol  = "windows/assertOSSensible"
@@ -283,6 +285,7 @@ extension = ".ps1"
 		# --- windows
 		"windows/assertAdminTerminal",
 		"windows/assertExecutionPolicy",
+		"windows/assertHomeSensible",
 		"windows/assertNetConnectivity",
 		"windows/assertOSSensible",
 		"windows/enableWindowsOptionalFeature",
